# uniswap_monitor

./: .env.example  .gitignore  Cargo.toml  README.md  token_metadata_examples.json
migrations/: 001_initial.sql  002_token_metadata.sql  003_last_processed_block.sql  004_split_last_processed_blocks.sql  005_token_prices.sql
scripts/: manage_token_metadata.rs
src/: api.rs  config.rs  database.rs  event_listener.rs  lib.rs  main.rs  models.rs
src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
src/api/handlers/: metadata_handlers.rs  mod.rs  status_handlers.rs  token_handlers.rs  trading_handlers.rs  wallet_handlers.rs
src/config/: mod.rs
src/database/: mod.rs  operations.rs  utils.rs
src/database/operations/: event_operations.rs  metadata_operations.rs  mod.rs  price_operations.rs  stats_operations.rs  system_operations.rs  token_operations.rs  trading_operations.rs  usd_calculator.rs  wallet_operations.rs
src/database/utils/: amount_converter.rs  data_processor.rs  mod.rs  price_calculator.rs  token_reordering.rs  trade_analyzer.rs  usd_estimator.rs
src/event_listener/: base_listener.rs  factory_listener.rs  mod.rs  swap_listener.rs
src/services/: api_service.rs  mod.rs  price_service.rs
src/types/: api_types.rs  event_service.rs  events.rs  mod.rs  models.rs  token_price.rs
